Fixed social media icons spacing, size and colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,8 +90,8 @@ nav.navbar {
 
 .sponsor {
     vertical-align: middle;
-    max-height: 100%;
-    max-width: 100%;
+    min-width: 200px;
+    max-width: 200px;
 }
 
 .blank-space-large {
@@ -128,8 +128,9 @@ nav.navbar {
 
 
 .fa {
-    padding: 20px;
+    padding: 14px;
     font-size:2em;
+    height: 60px;
     width: 60px;
     text-align: center;
     text-decoration: none;
@@ -149,7 +150,10 @@ nav.navbar {
 
 
 .fa-instagram {
-    background: #800080;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
     color: white;
 }
 
